# TopoConvert

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  coverage_report.txt  pyproject.toml  requirements.txt  roadmap.md  test_dataset2.csv  test_output.kml  test_points.csv  test_points.json  topo_convert_project_structure.md
.github/workflows/: lint.yml  publish-to-pypi.yml  tests.yml
docs/: cli_reference.md  developer_guide.md  index.md  installation.md  projection_guide.md  refactoring_guide.md
examples/data/: sample.csv  sample.kml
examples/notebooks/: quickstart.ipynb  slope_analysis_demo.ipynb
tests/: __init__.py  benchmark_config.py  conftest.py  edge_case_generators.py  memory_utils.py  test_core_contours.py  test_core_csv_kml.py  test_core_module.py  test_core_utils.py  test_csv_to_kml.py  test_kml_to_contours.py  test_kml_to_csv_minimal.py  test_kml_to_points.py  test_memory_utils.py  test_multi_csv_to_dxf.py  test_multi_csv_to_kml.py  test_package_structure.py  test_project_structure.py  test_slope_heatmap.py  test_slope_visualization.py  test_validation_consistency.py
tests/fixtures/: README.md  empty.kml  grid_4x4.kml  invalid_coords.kml  no_elevation.kml  simple_3points.kml  sparse_data.kml  steep_slope.kml
topoconvert/: __init__.py  __main__.py  cli.py
topoconvert/commands/: __init__.py  combined_dxf.py  csv_to_kml.py  gps_grid.py  kml_contours_to_dxf.py  kml_to_contours.py  kml_to_csv.py  kml_to_mesh.py  kml_to_points.py  kml_to_points_refactored.py  multi_csv_to_dxf.py  multi_csv_to_kml.py  slope_heatmap.py
topoconvert/core/: __init__.py  combined_dxf.py  combined_kml.py  contours.py  csv_kml.py  exceptions.py  gps_grid.py  kml_contours.py  mesh.py  points.py  points_refactored.py  result_types.py  slope_heatmap.py  utils.py
topoconvert/utils/: __init__.py  file_io.py  geometry.py  projection.py
