[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topoconvert"
version = "0.1.0"
description = "A unified geospatial conversion toolkit for survey data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TopoConvert Contributors"},
]
maintainers = [
    {name = "TopoConvert Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "shapely>=2.0.0",
    "pandas>=1.5.0",
    "ezdxf>=1.0.0",
    "pyproj>=3.4.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "alphashape>=1.3.0",
    "concave_hull>=0.0.7",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/topoconvert"
Documentation = "https://github.com/yourusername/topoconvert#readme"
Repository = "https://github.com/yourusername/topoconvert"
"Bug Tracker" = "https://github.com/yourusername/topoconvert/issues"

[project.scripts]
topoconvert = "topoconvert.cli:main"

[tool.setuptools]
packages = ["topoconvert", "topoconvert.commands", "topoconvert.utils"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=topoconvert --cov-report=term-missing"